# xml-aws-athena

./: .gitignore  README.md  pyproject.toml
src/xml_aws_athena/: __init__.py  cloud.py  connect.py  gold.py  parser.py  raw.py  schema.py  silver.py  write.py
tests/: test_cloud.py  test_connect.py
